--- a/wondergirls/css/import.css
+++ b/wondergirls/css/import.css
@@ -1,12 +1,38 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+html,
 body {
-  width: 100%;
+  height: 100%;
+}
+body {
+  background-image: url("../image/bg_pc.jpg");
+  -webkit-background-size: cover;
+  background-color: cover;
+  background-repeat: no-repeat;
+  background-position: center 0;
+}
+header {
   outline: 1px #F00 solid;
+  height: 100px;
 }
 header h1 {
   background-image: url("http://wondergirls.jype.com/images/logo-s.png");
   width: 104px;
   height: 52px;
+  outline: 1px #F00 solid;
+  float: left;
+}
+header nav {
+  float: right;
+  outline: 1px #F00 solid;
 }
 header nav ul {
   list-style: none;
+}
+header nav ul li {
+  display: inline;
+  vertical-align: middle;
+  outline: 1px #F00 solid;
 }
