--- a/wondergirls/css/import.css
+++ b/wondergirls/css/import.css
@@ -5,6 +5,9 @@
 ul {
   list-style: none;
 }
+a {
+  text-decoration: none;
+}
 html,
 body {
   height: 100%;
@@ -17,27 +20,31 @@ body {
   background-position: center 0;
 }
 header {
-  outline: 1px #F00 solid;
   height: 100px;
   background-color: rgba(255, 255, 255, 0.53);
+  padding: 0 20px;
+  box-shadow: 0 2px 16px #666;
 }
 header h1 {
-  background-image: url("http://wondergirls.jype.com/images/logo-s.png");
-  width: 104px;
-  height: 52px;
-  outline: 1px #F00 solid;
   float: left;
 }
 header h1 a {
+  background-image: url("http://wondergirls.jype.com/images/logo-s.png");
+  width: 104px;
+  height: 52px;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: block;
+  padding: 25px;
+  appearance: none;
   text-indent: -999px;
   font-size: 0px;
-  display: block;
-  margin: 25px;
-  outline: 1px #F00 solid;
+}
+header h1 a:hover {
+  transform: rotateY(180deg);
 }
 header nav {
   float: right;
-  border: 1px #F00 solid;
 }
 header nav .main_manu {
   display: none;
@@ -48,10 +55,39 @@ header nav li {
   line-height: 100px;
 }
 header nav li a {
-  outline: 1px #F00 solid;
   text-decoration: none;
   padding: 0 18px;
   display: block;
   font-size: 16px;
   font-weight: bold;
+  color: #F28195;
+}
+header nav li a:hover {
+  background-color: #FBF5E0;
+  color: #ECD28F;
+  border-top: 2px #F28195 solid;
+}
+@media screen and (max-width: 770px) {
+  body {
+    background-image: url(../image/bg-720.jpg);
+    background-position: center center;
+  }
+  header {
+    height: 55px;
+  }
+  header h1 a {
+    background-image: url("http://wondergirls.jype.com/images/logo-s.png");
+    width: 60px;
+    height: 40px;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: block;
+    margin: :5px 0 0 10px;
+    appearance: none;
+    text-indent: -999px;
+    font-size: 0px;
+  }
+  header h1 a:hover {
+    transform: rotateY(180deg);
+  }
 }
