--- a/wondergirls/css/import.css
+++ b/wondergirls/css/import.css
@@ -36,7 +36,6 @@ header h1 a {
   background-repeat: no-repeat;
   display: block;
   padding: 25px;
-  appearance: none;
   text-indent: -999px;
   font-size: 0px;
 }
@@ -74,6 +73,7 @@ header nav li a:hover {
   }
   header {
     height: 55px;
+    background-color: #ffffff;
   }
   header h1 a {
     background-image: url("http://wondergirls.jype.com/images/logo-s.png");
@@ -82,8 +82,8 @@ header nav li a:hover {
     background-position: center;
     background-repeat: no-repeat;
     display: block;
-    margin: :5px 0 0 10px;
-    appearance: none;
+    margin: 5px 0 0 10px;
+    padding: 0;
     text-indent: -999px;
     font-size: 0px;
   }
