--- a/wondergirls/less/style.less
+++ b/wondergirls/less/style.less
@@ -51,6 +51,7 @@ body{
 
          text-indent: -999px;
          font-size: 0px;
+         transition: 1s;
           &:hover{
             transform: rotateY(180deg);
           }
